Update Podcat-744 feature: fix collapse and expand UI issue (#207)
* Update PODCAT-744 feature: fix participating resource detail page collapse issue

* Update PODCAT-744 feature: fix participating resource page filter accordion issue

--- a/src/pages/participatingResourceDetailPage/participatingResourceDetailPage.css
+++ b/src/pages/participatingResourceDetailPage/participatingResourceDetailPage.css
@@ -1,4 +1,3 @@
-
 .prBreadcrumbContainer {
   /* padding: 5px 0px 0px 0px; */
   /* width: 100%; */
@@ -157,6 +156,7 @@
   font-weight: 400;
   background-color: transparent;
   box-shadow: none;
+  cursor: pointer;
 }
 
 .accordion-button-ccdc-pr:focus {
